find a doctor line spacing and mobile dropdown width fix.

--- a/scss/_select2.scss
+++ b/scss/_select2.scss
@@ -163,7 +163,7 @@
     }
   }
   .select2-selection--multiple {
-    background-color: $white;
+/*     background-color: $white; */
     border: 1px solid $gray_light;
     border-radius: 4px;
     cursor: text;
